--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -39,12 +39,23 @@
     </label>
     <div class="col-sm-10">
       <input type="text" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= @photo.user_id %>">
+      <select name="user_id" id="user_id" class="form-control">
+        <% User.all.each do |user| %>
+          <option value="<%= user.id %>" <%= "selected" if @photo.user_id == user.id %>><%= user.username %></option>
+        <% end %>
+      </select>
+
+      <%= select_tag(:user_id, options_from_collection_for_select(User.all, :id, :username, @photo.user_id), :class => "form-control") %>
+
     </div>
   </div>
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <input type="submit" value="Update Photo" class="btn btn-primary">
+      or
+      <!-- <a href="/photos/<%= @photo.id %>">Cancel</a> -->
+      <%= link_to("Cancel", "/photos/#{@photo.id}") %>
     </div>
   </div>
 </form>
