--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -39,7 +39,11 @@
       User
     </label>
     <div class="col-sm-10">
-      <input type="text" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= @photo.user_id %>">
+      <select name="user_id" id="user_id" class="form-control">
+        <% User.all.each do |user| %>
+          <option value="<%= user.id %>"><%= user.username %></option>
+        <% end %>
+      </select>
     </div>
   </div>
 
