Finished adding comment form to Photos#show page

--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -19,7 +19,12 @@
         <li><%= comment.content %></li>
       <% end %>
       <li>
-        <input type="text">
+        <form action="/create_comment">
+          <input name="content" type="text">
+          <%= select_tag(:user_id, options_from_collection_for_select(User.all, :id, :username)) %>
+          <input type="hidden" name="photo_id" value="<%= @photo.id %>">
+          <input type="submit" value="Add Comment">
+        </form>
       </li>
     </ul>
   </dd>
