Added comments form to index page

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -31,6 +31,19 @@
               <i class="fa fa-trash-o"></i>
             </a>
           </p>
+          <ul>
+            <% photo.comments.each do |comment| %>
+              <li><%= comment.content %></li>
+            <% end %>
+            <li>
+              <form action="/create_comment">
+                <input name="content" type="text">
+                <%= select_tag(:user_id, options_from_collection_for_select(User.all, :id, :username)) %>
+                <input type="hidden" name="photo_id" value="<%= photo.id %>">
+                <input type="submit" value="Add Comment">
+              </form>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
