--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -33,19 +33,7 @@
     </div>
   </div>
 
-  <!-- Label and input for user_id -->
-  <div class="form-group">
-    <label for="user_id" class="col-sm-2 control-label">
-      User
-    </label>
-    <div class="col-sm-10">
-      <select name="user_id" id="user_id" class="form-control">
-        <% User.all.each do |user| %>
-          <option value="<%= user.id %>"><%= user.username %></option>
-        <% end %>
-      </select>
-    </div>
-  </div>
+  <input type="hidden" name="user_id" value="<%= current_user.id %>">
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
