--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -45,10 +45,10 @@
           </li>
         <% end %>
         <li class="media">
-          <form action="/create_comment">
-            <input name="content" type="text" class="form-control">
-            <input type="hidden" name="user_id" value="<%= current_user.id %>">
-            <input type="hidden" name="photo_id" value="<%= photo.id %>">
+          <form action="...">
+            <input type="..." name="content" class="form-control">
+            <input type="..." name="user_id" value="...">
+            <input type="..." name="photo_id" value="...">
           </form>
         </li>
       </ul>
