--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -10,7 +10,7 @@
   <dd><%= @photo.caption %></dd>
 
   <dt>User</dt>
-  <dd><%= @photo.user_id %></dd>
+  <dd><%= @photo.owner.username %></dd>
 
   <dt>Comments</dt>
   <dd>
@@ -19,10 +19,10 @@
         <li><%= comment.content %></li>
       <% end %>
       <li>
-        <form action="...">
-          <input type="..." name="content" class="form-control">
-          <input type="..." name="user_id" value="...">
-          <input type="..." name="photo_id" value="...">
+        <form action="/create_comment">
+          <input type="text" name="content" class="form-control">
+          <input type="hidden" name="user_id" value="<%= current_user.id %>">
+          <input type="hidden" name="photo_id" value="<%= @photo.id %>">
         </form>
       </li>
     </ul>
