--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -21,15 +21,27 @@
         <div class="caption">
           <p class="lead"><%= photo.caption %></p>
           <p>
-            <a href="/photos/<%= photo.id %>" class="btn btn-primary">
-              <i class="fa fa-search-plus"></i>
-            </a>
-            <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
-              <i class="fa fa-edit"></i>
-            </a>
-            <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger">
-              <i class="fa fa-trash-o"></i>
-            </a>
+            <div class="btn-group">
+              <a href="/photos/<%= photo.id %>" class="btn btn-primary">
+                <i class="fa fa-search-plus"></i>
+              </a>
+              <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
+                <i class="fa fa-edit"></i>
+              </a>
+              <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger">
+                <i class="fa fa-trash-o"></i>
+              </a>
+              <a href="/create_favoriting?user_id=<%= current_user.id %>&photo_id=<%= photo.id %>" class="btn btn-success">
+                <i class="fa fa-heart-o"></i>
+              </a>
+            </div>
+
+            <form action="/create_favoriting">
+              <input name="user_id" type="hidden" value="<%= current_user.id %>">
+              <input name="photo_id" type="hidden" value="<%= photo.id %>">
+
+              <button class="btn btn-success"><i class="fa fa-heart-o"></i></button>
+            </form>
           </p>
         </div>
       </div>
