--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -25,23 +25,33 @@
               <a href="/photos/<%= photo.id %>" class="btn btn-primary">
                 <i class="fa fa-search-plus"></i>
               </a>
-              <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
-                <i class="fa fa-edit"></i>
-              </a>
-              <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger">
-                <i class="fa fa-trash-o"></i>
-              </a>
-              <a href="/create_favoriting?user_id=<%= current_user.id %>&photo_id=<%= photo.id %>" class="btn btn-success">
-                <i class="fa fa-heart-o"></i>
-              </a>
+
+              <% if current_user == photo.owner %>
+                <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
+                  <i class="fa fa-edit"></i>
+                </a>
+                <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger">
+                  <i class="fa fa-trash-o"></i>
+                </a>
+              <% end %>
+
+              <% if current_user.favorite_photos.include?(photo) %>
+                <a href="/create_favoriting?user_id=<%= current_user.id %>&photo_id=<%= photo.id %>" class="btn btn-success">
+                  <i class="fa fa-heart-o"></i>
+                </a>
+              <% else %>
+                <span class="btn btn-default active">
+                  <i class="fa fa-heart"></i>
+                </span>
+              <% end %>
             </div>
 
-            <form action="/create_favoriting">
+<!--             <form action="/create_favoriting">
               <input name="user_id" type="hidden" value="<%= current_user.id %>">
               <input name="photo_id" type="hidden" value="<%= photo.id %>">
 
               <button class="btn btn-success"><i class="fa fa-heart-o"></i></button>
-            </form>
+            </form> -->
           </p>
         </div>
       </div>
