Updated nav bar users link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
         <li><a href="/my_timeline"><i class="fa fa-clock-o"></i></a></li>
         <li><a href="/my_favorites"><i class="fa fa-heart"></i></a></li>
         <li><a href="/photos/new"><i class="fa fa-camera-retro"></i></a></li>
-        <li><a href="/users/new"><i class="fa fa-users"></i></a></li>
+        <li><a href="/users"><i class="fa fa-users"></i></a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
