--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -40,6 +40,7 @@
                   <i class="fa fa-heart-o"></i>
                 </a>
               <% else %>
+                <!-- Homework: Make this into a link that, when clicked, un-favorites the photo -->
                 <span class="btn btn-default active">
                   <i class="fa fa-heart"></i>
                 </span>
