--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
+<!-- Optional Homework: Make this user profile page look good. Include the user's own photos. -->
+
+<!-- Homework: Add a "Follow" button to this user's profile. Make it work. -->
+
 <div class="page-header">
   <h1>User #<%= @user.id %></h1>
 </div>
