--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,4 +13,26 @@
   <dt>Avatar url</dt>
   <dd><%= @user.avatar_url %></dd>
 
+  <dt></dt>
+  <dd>
+    <% if current_user.leaders.include?(@user) %>
+      <% following = Following.find_by({ :leader_id => @user.id, :follower_id => current_user.id }) %>
+      <a href="/delete_following/<%= following.id %>" class="btn btn-danger btn-lg">Un-follow</a>
+
+<!--       <form action="/delete_following/<%=following.id %>">
+        <input type="submit">
+      </form> -->
+    <% else %>
+      <a href="/create_following?follower_id=<%= current_user.id %>&leader_id=<%= @user.id %>" class="btn btn-success btn-lg">Follow</a>
+
+<!--       <form action="/create_following">
+        <input type="hidden" name="follower_id" value="<%= current_user.id %>">
+        <input type="hidden" name="leader_id" value="<%= @user.id %>">
+        <button>Follow</button>
+      </form> -->
+    <% end %>
+  </dd>
 </dl>
+
+
+
