Added file uploads

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="col-md-6 well">
       <div class="thumbnail">
-        <img src="<%= photo.image_url %>">
+        <img src="<%= photo.photo_file %>">
         <div class="caption">
           <p class="lead"><%= photo.caption %></p>
           <p>
