--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 
-<form action="/create_photo" class="form-horizontal">
+<form action="/create_photo" class="form-horizontal" method="post" enctype="multipart/form-data">
   <!-- Label and input for image_url -->
   <div class="form-group">
     <label for="image_url" class="col-sm-2 control-label">
@@ -20,6 +20,16 @@
     </label>
     <div class="col-sm-10">
       <input type="text" id="image_url" name="image_url" placeholder="Image url" class="form-control" value="<%= @photo.image_url %>">
+    </div>
+  </div>
+
+  <!-- Label and input for photo_file -->
+  <div class="form-group">
+    <label for="photo_file" class="col-sm-2 control-label">
+      Photo File
+    </label>
+    <div class="col-sm-10">
+      <input type="file" id="photo_file" name="photo_file" class="form-control">
     </div>
   </div>
 
