--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -8,11 +8,13 @@
           <a href="/users/<%= photo.owner.id %>">
             <%= photo.owner.username %>
           </a>
+          <%= link_to(photo.owner.username, "/users/#{photo.owner.id}", :class => "btn btn-success") %>
         </p>
         <p class="text-right"><%= time_ago_in_words(photo.created_at) %> ago</p>
       </div>
       <div class="pull-right">
         <img src="<%= photo.owner.avatar_url %>" class="img-responsive pull-right">
+        <%= image_tag(photo.owner.avatar_url, :class => "img-responsive pull-right") %>
       </div>
     </div>
     <div class="col-md-6 well">
@@ -25,6 +27,7 @@
               <a href="/photos/<%= photo.id %>" class="btn btn-primary">
                 <i class="fa fa-search-plus"></i>
               </a>
+              <%= link_to("<i class=\"fa fa-search-plus\"></i>".html_safe, "/photos/#{photo.id}", :class => "btn btn-primary") %>
 
               <% if current_user == photo.owner %>
                 <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
