--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,20 +1,26 @@
 <hr>
 
+<%= say_hi(current_user.username) %>
+
 <% @photos.each do |photo| %>
   <div class="row" id="photo_<%= photo.id %>">
     <div class="col-md-2 col-md-offset-1">
       <div class="pull-left">
         <p class="text-right">
-          <a href="/users/<%= photo.owner.id %>">
+<!--           <a href="/users/<%= photo.owner.id %>">
             <%= photo.owner.username %>
-          </a>
+          </a> -->
           <%= link_to(photo.owner.username, "/users/#{photo.owner.id}", :class => "btn btn-success") %>
         </p>
         <p class="text-right"><%= time_ago_in_words(photo.created_at) %> ago</p>
       </div>
       <div class="pull-right">
-        <img src="<%= photo.owner.avatar_url %>" class="img-responsive pull-right">
-        <%= image_tag(photo.owner.avatar_url, :class => "img-responsive pull-right") %>
+<!--         <a href="/users/<%= photo.owner.id %>">
+          <img src="<%= photo.owner.avatar_url %>" class="img-responsive pull-right">
+        </a> -->
+
+        <%= link_to(image_tag(photo.owner.avatar_url, :class => "img-responsive pull-right"), "/users/#{photo.owner.id}") %>
+
       </div>
     </div>
     <div class="col-md-6 well">
@@ -24,18 +30,23 @@
           <p class="lead"><%= photo.caption %></p>
           <p>
             <div class="btn-group">
-              <a href="/photos/<%= photo.id %>" class="btn btn-primary">
-                <i class="fa fa-search-plus"></i>
-              </a>
-              <%= link_to("<i class=\"fa fa-search-plus\"></i>".html_safe, "/photos/#{photo.id}", :class => "btn btn-primary") %>
+              <%= link_to("<i class=\"fa fa-search-plus\"></i>".html_safe,
+                          photo_url(photo),
+                          :class => "btn btn-primary") %>
 
               <% if current_user == photo.owner %>
                 <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
                   <i class="fa fa-edit"></i>
                 </a>
+                <%= link_to("<i class=\"fa fa-edit\"></i>".html_safe,
+                            edit_photo_url(photo),
+                            :class => "btn btn-warning") %>
                 <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger">
                   <i class="fa fa-trash-o"></i>
                 </a>
+                <%= link_to("<i class=\"fa fa-trash-o\"></i>".html_safe,
+                            delete_photo_url(photo),
+                            :class => "btn btn-danger") %>
               <% end %>
 
               <% if current_user.favorite_photos.include?(photo) %>
