Started switching Photos#new form to helper methods

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,13 +1,13 @@
 <hr>
 
-<%= say_hi(current_user.username) %>
+<%#= say_hi(current_user.username) %>
 
 <% @photos.each do |photo| %>
   <div class="row" id="photo_<%= photo.id %>">
     <div class="col-md-2 col-md-offset-1">
       <div class="pull-left">
         <p class="text-right">
-<!--           <a href="/users/<%= photo.owner.id %>">
+<!--      <a href="/users/<%= photo.owner.id %>">
             <%= photo.owner.username %>
           </a> -->
           <%= link_to(photo.owner.username, "/users/#{photo.owner.id}", :class => "btn btn-success") %>
@@ -15,7 +15,7 @@
         <p class="text-right"><%= time_ago_in_words(photo.created_at) %> ago</p>
       </div>
       <div class="pull-right">
-<!--         <a href="/users/<%= photo.owner.id %>">
+<!--    <a href="/users/<%= photo.owner.id %>">
           <img src="<%= photo.owner.avatar_url %>" class="img-responsive pull-right">
         </a> -->
 
@@ -35,15 +35,15 @@
                           :class => "btn btn-primary") %>
 
               <% if current_user == photo.owner %>
-                <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
+<!--            <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
                   <i class="fa fa-edit"></i>
-                </a>
+                </a> -->
                 <%= link_to("<i class=\"fa fa-edit\"></i>".html_safe,
                             edit_photo_url(photo),
                             :class => "btn btn-warning") %>
-                <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger">
+<!--            <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger">
                   <i class="fa fa-trash-o"></i>
-                </a>
+                </a> -->
                 <%= link_to("<i class=\"fa fa-trash-o\"></i>".html_safe,
                             delete_photo_url(photo),
                             :class => "btn btn-danger") %>
@@ -61,7 +61,7 @@
               <% end %>
             </div>
 
-<!--             <form action="/create_favoriting">
+<!--        <form action="/create_favoriting">
               <input name="user_id" type="hidden" value="<%= current_user.id %>">
               <input name="photo_id" type="hidden" value="<%= photo.id %>">
 
