--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -15,11 +15,10 @@
 <form action="/create_photo" class="form-horizontal" method="post" enctype="multipart/form-data">
   <!-- Label and input for image_url -->
   <div class="form-group">
-    <label for="image_url" class="col-sm-2 control-label">
-      Image url
-    </label>
+    <%= label_tag(:image_url, "Image URL", { :class => "col-sm-2 control-label" }) %>
     <div class="col-sm-10">
-      <input type="text" id="image_url" name="image_url" placeholder="Image url" class="form-control" value="<%= @photo.image_url %>">
+      <!-- <input type="text" id="image_url" name="image_url" placeholder="Image url" class="form-control" value="<%= @photo.image_url %>"> -->
+      <%= text_field_tag(:image_url, @photo.image_url, { :class => "form-control", :placeholder => "Image URL" }) %>
     </div>
   </div>
 
@@ -29,7 +28,8 @@
       Photo File
     </label>
     <div class="col-sm-10">
-      <input type="file" id="photo_file" name="photo_file" class="form-control">
+      <!-- <input type="file" id="photo_file" name="photo_file" class="form-control"> -->
+      <%= file_field_tag :photo_file, :class => "form-control" %>
     </div>
   </div>
 
@@ -47,7 +47,8 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <input type="submit" value="Create Photo" class="btn btn-primary">
+      <!-- <input type="submit" value="Create Photo" class="btn btn-primary"> -->
+      <%= submit_tag "Create Photo", :class => "btn btn-primary" %>
     </div>
   </div>
 </form>
