--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -79,6 +79,8 @@
       <!-- <input type="submit" value="Create Photo" class="btn btn-primary"> -->
 
       <%= submit_tag "Create Photo", :class => "btn btn-primary" %>
+      or
+      <%= link_to "Cancel", :back %>
 
     </div>
   </div>
