--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -2,94 +2,4 @@
   <h1>Add Photo</h1>
 </div>
 
-<% if @photo.errors.any? %>
-  <% @photo.errors.full_messages.each do |message| %>
-    <div class="alert alert-dismissable alert-danger">
-      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      <%= message %>
-    </div>
-  <% end %>
-<% end %>
-
-
-<!-- <form action="/create_photo" class="form-horizontal" method="post" enctype="multipart/form-data">
- -->
-<%= form_tag("/create_photo", :class => "form-horizontal", :enctype => "multipart/form-data") do %>
-
-  <!-- Label and input for image_url -->
-  <div class="form-group">
-
-<!--<label for="image_url" class="col-sm-2 control-label">
-      Image URL
-    </label> -->
-
-    <%= label_tag(:image_url, "Image URL", { :class => "col-sm-2 control-label" }) %>
-
-    <div class="col-sm-10">
-
-      <!-- <input type="text" id="image_url" name="image_url" placeholder="Image url" class="form-control" value="<%= @photo.image_url %>"> -->
-
-      <%= text_field_tag(:image_url, @photo.image_url, { :class => "form-control", :placeholder => "Image URL" }) %>
-
-    </div>
-  </div>
-
-  <!-- Label and input for photo_file -->
-  <div class="form-group">
-
-<!--<label for="photo_file" class="col-sm-2 control-label">
-      Photo File
-    </label> -->
-
-    <%= label_tag(:photo_file, nil, :class => "col-sm-2 control-label") %>
-
-    <div class="col-sm-10">
-
-      <!-- <input type="file" id="photo_file" name="photo_file" class="form-control"> -->
-
-      <%= file_field_tag :photo_file, :class => "form-control" %>
-
-    </div>
-  </div>
-
-  <!-- Label and input for caption -->
-  <div class="form-group">
-
-<!--<label for="caption" class="col-sm-2 control-label">
-      Caption
-    </label> -->
-
-    <%= label_tag :caption, nil, :class => "col-sm-2 control-label" %>
-
-    <div class="col-sm-10">
-
-<!--  <input type="text" id="caption" name="caption" placeholder="Caption" class="form-control" value="<%= @photo.caption %>"> -->
-
-      <%= text_field_tag :caption, @photo.caption, :class => "form-control", :placeholder => "Caption" %>
-    </div>
-  </div>
-
-<!--<input type="hidden" name="user_id" value="<%= current_user.id %>"> -->
-
-  <%= hidden_field_tag :user_id, current_user.id %>
-
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-
-      <!-- <input type="submit" value="Create Photo" class="btn btn-primary"> -->
-
-      <%= submit_tag "Create Photo", :class => "btn btn-primary" %>
-      or
-      <%= link_to "Cancel", :back %>
-
-    </div>
-  </div>
-
-<% end %>
-
-<!-- </form> -->
-
-
-
-
-
+<%= render 'form' %>
