--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -3,8 +3,8 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt>Image url</dt>
-  <dd><%= @photo.image_url %></dd>
+  <dt></dt>
+  <dd><%= image_tag @photo.photo_file, :width => "320" %></dd>
 
   <dt>Caption</dt>
   <dd><%= @photo.caption %></dd>
