--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,8 +46,8 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if current_user.present? %>
-          <li><a href="/users/edit"><%= current_user.username %></a></li>
-          <li><a href="/users/sign_out" data-method="delete">Sign out</a></li>
+          <li><%= link_to current_user.username, edit_user_registration_path %></li>
+          <li><%= link_to "Sign out", destroy_user_session_path, :method => "delete" %></li>
         <% else %>
           <li><a href="/users/sign_up">Sign up</a></li>
           <li><a href="/users/sign_in">Sign in</a></li>
