--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,90 +1,5 @@
-<hr>
+<div class="page-header">
+  <h1>All Photos</h1>
+</div>
 
-<%#= say_hi(current_user.username) %>
-
-<% @photos.each do |photo| %>
-  <div class="row" id="photo_<%= photo.id %>">
-    <div class="col-md-2 col-md-offset-1">
-      <div class="pull-left">
-        <p class="text-right">
-<!--      <a href="/users/<%= photo.owner.id %>">
-            <%= photo.owner.username %>
-          </a> -->
-          <%= link_to(photo.owner.username, "/users/#{photo.owner.id}", :class => "btn btn-success") %>
-        </p>
-        <p class="text-right"><%= time_ago_in_words(photo.created_at) %> ago</p>
-      </div>
-      <div class="pull-right">
-<!--    <a href="/users/<%= photo.owner.id %>">
-          <img src="<%= photo.owner.avatar_url %>" class="img-responsive pull-right">
-        </a> -->
-
-        <%= link_to(image_tag(photo.owner.avatar_url, :class => "img-responsive pull-right"), "/users/#{photo.owner.id}") %>
-
-      </div>
-    </div>
-    <div class="col-md-6 well">
-      <div class="thumbnail">
-        <!-- <img src="<%= photo.photo_file %>"> -->
-        <%= image_tag(photo.photo_file) %>
-        <div class="caption">
-          <p class="lead"><%= photo.caption %></p>
-          <p>
-            <div class="btn-group">
-              <%= link_to("<i class=\"fa fa-search-plus\"></i>".html_safe,
-                          photo_url(photo),
-                          :class => "btn btn-primary") %>
-
-              <% if current_user == photo.owner %>
-<!--            <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
-                  <i class="fa fa-edit"></i>
-                </a> -->
-                <%= link_to("<i class=\"fa fa-edit\"></i>".html_safe,
-                            edit_photo_url(photo),
-                            :class => "btn btn-warning") %>
-<!--            <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger">
-                  <i class="fa fa-trash-o"></i>
-                </a> -->
-                <%= link_to("<i class=\"fa fa-trash-o\"></i>".html_safe,
-                            photo_url(photo),
-                            :class => "btn btn-danger",
-                            :method => "delete",
-                            :data => { :confirm => "Are you suuuuuuure?" }) %>
-              <% end %>
-
-              <% if current_user.favorite_photos.include?(photo) %>
-                <% favoriting = Favoriting.find_by({ :user_id => current_user.id, :photo_id => photo.id }) %>
-                <%= link_to("<i class=\"fa fa-heart\"></i>".html_safe,
-                            "/delete_favoriting/#{favoriting.id}", :class => "btn btn-default active") %>
-              <% else %>
-                <%= link_to("<i class=\"fa fa-heart-o\"></i>".html_safe,
-                            "/create_favoriting?user_id=#{current_user.id}&photo_id=#{photo.id}",
-                            :class => "btn btn-success") %>
-              <% end %>
-            </div>
-          </p>
-        </div>
-      </div>
-      <ul class="media-list">
-        <% photo.comments.each do |comment| %>
-          <li class="media">
-<!--        <a class="pull-left" href="/users/<%= comment.user.id %>">
-              <img class="media-object" src="<%= comment.user.avatar_url %>">
-            </a> -->
-            <%= link_to(image_tag(comment.user.avatar_url, :class => "media-object"), "/users/#{comment.user.id}") %>
-            <div class="media-body">
-              <p class="lead"><%= comment.content %></p>
-            </div>
-          </li>
-        <% end %>
-        <li class="media">
-          <form action="/create_comment">
-            <input type="text" name="content" class="form-control">
-            <input type="hidden" name="user_id" value="<%= current_user.id %>">
-            <input type="hidden" name="photo_id" value="<%= photo.id %>">
-          </form>
-        </li>
-      </ul>
-    </div>
-  </div>
-<% end %>
+<%= render 'photos/photo_list' %>
