Ajaxified a few things

--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -44,17 +44,13 @@
                             photo,
                             :class => "btn btn-danger",
                             :method => "delete",
-                            :data => { :confirm => "Are you suuuuuuure?" }) %>
+                            :remote => true) %>
               <% end %>
 
               <% if current_user.favorite_photos.include?(photo) %>
-                <% favoriting = Favoriting.find_by({ :user_id => current_user.id, :photo_id => photo.id }) %>
-                <%= link_to("<i class=\"fa fa-heart\"></i>".html_safe,
-                            "/delete_favoriting/#{favoriting.id}", :class => "btn btn-default active") %>
+                <%= render "unfavorite_button", :the_photo => photo %>
               <% else %>
-                <%= link_to("<i class=\"fa fa-heart-o\"></i>".html_safe,
-                            "/create_favoriting?user_id=#{current_user.id}&photo_id=#{photo.id}",
-                            :class => "btn btn-success") %>
+                <%= render "favorite_button", :the_photo => photo %>
               <% end %>
             </div>
           </p>
