Added Bootstrap gem

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -10,6 +10,17 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
  */
+
+ $brand-primary: #9109B3;
+ $navbar-default-bg: #9109B3;
+ $navbar-default-link-color: #fff;
+
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+
+/* body {
+  background-image: url('<%= image_path "bg.png" %>');
+ }
+*/
